// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoyTs dzlBxB"
>
  <li
    className="sc-fzqARJ gyxVVf"
  >
    <span
      className="sc-fzokOt druawj"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzqARJ gyxVVf"
  >
    <span
      className="sc-fzokOt druawj"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzqARJ gyxVVf"
  >
    <span
      className="sc-fzokOt druawj"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoyTs dzlBxB"
>
  <li
    className="sc-fzqARJ sc-fzqNqU djqerP"
  >
    <span
      className="sc-fzokOt druawj"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzqARJ sc-fzqNqU djqerP"
  >
    <span
      className="sc-fzokOt druawj"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzqARJ sc-fzqNqU djqerP"
  >
    <span
      className="sc-fzokOt druawj"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
